[metadata]
name = cornlib
version = 0.0.1
author = Corn
author_email = yang.yuming@realtek.com
description = Personal library for analyzing JIAR and Gerrot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roger199585/cornlib
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src